# spektrafilm-ofx

./: .gitignore  CMakeLists.txt  README.md  build_macos.sh  build_windows.ps1  install_instructions.txt
PnP/Parity/: README.md
PnP/Parity/01 Sample/: manifest.json  metrics.json  summary.csv
PnP/Parity/01 Sample/cases/quick__gray_ramp__film_density_cmy/: metal_stdout.txt
PnP/Parity/01 Sample/cases/quick__gray_ramp__film_log_raw/: metal_stdout.txt  params.txt
PnP/Parity/01 Sample/cases/quick__gray_ramp__final_linear_rgb/: metal_stdout.txt
PnP/Parity/01 Sample/cases/quick__gray_ramp__print_density_cmy/: metal_stdout.txt
PnP/Parity/01 Sample/cases/quick__gray_ramp__print_log_raw/: metal_stdout.txt  params.txt
PnP/Parity/01 Sample/cases/quick__hard_edge__camera_diffusion_final/: diff_exr_notes.json  metal_stdout.txt  params.txt
PnP/Parity/01 Sample/cases/quick__hard_edge__film_density_cmy/: metal_stdout.txt
PnP/Parity/01 Sample/cases/quick__hard_edge__film_log_raw/: metal_stdout.txt
PnP/Parity/01 Sample/cases/quick__hard_edge__final_linear_rgb/: metal_stdout.txt
PnP/Parity/01 Sample/cases/quick__hard_edge__print_density_cmy/: diff_exr_notes.json  metal_stdout.txt
PnP/Parity/01 Sample/cases/quick__hard_edge__print_diffusion_final/: diff_exr_notes.json  metal_stdout.txt  params.txt
PnP/Parity/01 Sample/cases/quick__hard_edge__print_log_raw/: metal_stdout.txt
PnP/Parity/01 Sample/cases/quick__impulse_highlight__halation_final/: metal_stdout.txt  params.txt
PnP/Parity/01 Sample/cases/quick__log_gray_ramp__film_density_cmy/: metal_stdout.txt
PnP/Parity/01 Sample/cases/quick__log_gray_ramp__film_log_raw/: metal_stdout.txt
PnP/Parity/01 Sample/cases/quick__log_gray_ramp__final_linear_rgb/: metal_stdout.txt
PnP/Parity/01 Sample/cases/quick__log_gray_ramp__print_density_cmy/: metal_stdout.txt
PnP/Parity/01 Sample/cases/quick__log_gray_ramp__print_log_raw/: metal_stdout.txt
PnP/Parity/01 Sample/cases/quick__log_gray_ramp__production_grain_density/: diff_exr_notes.json  metal_stdout.txt  params.txt
PnP/Parity/01 Sample/cases/quick__primary_secondary_skin_foliage_patches__film_density_cmy/: metal_stdout.txt
PnP/Parity/01 Sample/cases/quick__primary_secondary_skin_foliage_patches__film_log_raw/: metal_stdout.txt
PnP/Parity/01 Sample/cases/quick__primary_secondary_skin_foliage_patches__final_linear_rgb/: metal_stdout.txt  params.txt
PnP/Parity/01 Sample/cases/quick__primary_secondary_skin_foliage_patches__print_density_cmy/: diff_exr_notes.json  metal_stdout.txt  params.txt
PnP/Parity/01 Sample/cases/quick__primary_secondary_skin_foliage_patches__print_log_raw/: metal_stdout.txt
PnP/Parity/01 Sample/cases/quick__rgb_channel_ramps__film_density_cmy/: metal_stdout.txt  params.txt
PnP/Parity/01 Sample/cases/quick__rgb_channel_ramps__film_log_raw/: metal_stdout.txt
PnP/Parity/01 Sample/cases/quick__rgb_channel_ramps__final_linear_rgb/: metal_stdout.txt
PnP/Parity/01 Sample/cases/quick__rgb_channel_ramps__print_density_cmy/: diff_exr_notes.json  metal_stdout.txt
PnP/Parity/01 Sample/cases/quick__rgb_channel_ramps__print_log_raw/: metal_stdout.txt
PnP/Parity/01 Sample/cases/quick__slanted_edge__scanner_glare_final/: metal_stdout.txt  params.txt
PnP/Parity/01 Sample/cases/quick__spatial_stress__combined_no_grain_final/: diff_exr_notes.json  metal_stdout.txt  params.txt
PnP/Parity/01 Sample/cases/quick__spatial_stress__combined_pipeline_final/: diff_exr_notes.json  metal_stdout.txt  params.txt
PnP/Parity/01 Sample/cases/quick__spatial_stress__dir_final/: diff_exr_notes.json  metal_stdout.txt  params.txt
PnP/Performance/: README.md
PnP/Performance/01 First Pass/: best_configs.csv  best_configs.json  candidate_comparison.csv  candidate_comparison.json  manifest.json  perf_results.csv  perf_results.json  quality_results.json
PnP/Performance/02 Multi Pass/: best_configs.csv  best_configs.json  candidate_comparison.csv  candidate_comparison.json  manifest.json  perf_results.csv  perf_results.json  quality_results.json
PnP/Performance/03 Combined Multi Pass/: best_configs.csv  best_configs.json  candidate_comparison.csv  candidate_comparison.json  manifest.json  perf_results.csv  perf_results.json  quality_results.json
PnP/Performance/04 Finalized Multi Pass/: best_configs.csv  best_configs.json  candidate_comparison.csv  candidate_comparison.json  manifest.json  perf_results.csv  perf_results.json  quality_results.json
Resources/: plugin_manifest.json.in
shaders/: SpektraFilm.metal
shaders/vulkan/: SpektraCopy.comp  SpektraCurveDevelop.comp  SpektraDiffusion.comp  SpektraDir.comp  SpektraFilmExposure.comp  SpektraFormatConvert.comp  SpektraGrain.comp  SpektraHalation.comp  SpektraPrintScan.comp  SpektraScannerPost.comp
src/: SpektraAppBridge.h  SpektraAppBridge.mm  SpektraCudaKernels.cu  SpektraCudaKernels.cuh  SpektraCudaRenderer.cpp  SpektraCudaRenderer.h  SpektraFilmPlugin.cpp  SpektraMetalRenderer.h  SpektraMetalRenderer.mm  SpektraNativeRenderer.cpp  SpektraParameters.h  SpektraProfileCurves.h  SpektraRenderCore.cpp  SpektraRenderCore.h  SpektraRenderer.h  SpektraTooltips.h  SpektraVulkanRenderer.cpp  SpektraVulkanRenderer.h
tests/: test_sdr_transfer_encode.py
tools/: SpektraCudaHarness.cpp  SpektraHarnessHostIO.h  SpektraMetalParityHarness.mm  SpektraMetalPerfHarness.mm  SpektraVariantGenerator.mm  SpektraVulkanCopyHarness.cpp  generate_exhaustive_manifest.py  generate_manual_parity_chart.py  generate_profile_curves.py  package_macos_release.sh  package_windows_release.ps1  perf_candidates_blur_prototypes.json  perf_candidates_combo_flags.json  perf_candidates_exhaustive.json  perf_candidates_spectral_transmittance.json  run_compile_perf_sweep.py  run_parity_harness.py  run_perf_quality_sweep.py  test_run_perf_quality_sweep.py
tools/windows_install/: install.bat
